--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "epiphany"]
-	path = epiphany
+[submodule "api/epiphany"]
+	path = api/epiphany
 	url = https://github.com/jmathai/epiphany.git
