--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "api/epiphany"]
-	path = api/epiphany
-	url = https://github.com/iMartyn/epiphany.git
 [submodule "submodules/phpMQTT"]
 	path = submodules/phpMQTT
 	url = https://github.com/bluerhinos/phpMQTT.git
+[submodule "api/epiphany"]
+	path = api/epiphany
+	url = git@github.com:iMartyn/epiphany.git
