--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/phpMQTT"]
 	path = submodules/phpMQTT
 	url = https://github.com/bluerhinos/phpMQTT.git
+[submodule "api/epiphany"]
+	path = api/epiphany
+	url = git@github.com:iMartyn/epiphany.git
