--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
 {
     "require": {
-        "behat/behat": "2.4.*@stable"
+        "behat/behat": "2.4.*@stable",
+        "behat/mink": "1.4.*@stable",
+        "behat/mink-extension": "*",
+        "behat/mink-goutte-driver": "*",
+	"guzzle/guzzle": "2.4.*"
     },
 
     "config": {
