--- a/vagrant/puppet/hieradata/common.yaml
+++ b/vagrant/puppet/hieradata/common.yaml
@@ -59,6 +59,16 @@ nginx:
                 - index.php
             envvars:
                 - 'APP_ENV dev'
+        xokEUYbnPg5z:
+            server_name: frontend.compaxion-vm.dev
+            www_root: /srv/compaxion-vm.dev/frontend/web
+            listen_port: '80'
+            index_files:
+                - index.html
+                - index.htm
+                - index.php
+            envvars:
+                - 'APP_ENV dev'
 php:
     version: '55'
     composer: '1'
