--- a/vagrant/puppet/hieradata/common.yaml
+++ b/vagrant/puppet/hieradata/common.yaml
@@ -66,7 +66,7 @@ nginx:
             index_files:
                 - index.html
                 - index.htm
-                - index.php
+                - app.php
             envvars:
                 - 'APP_ENV dev'
 php:
