--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -64,6 +64,19 @@ Vagrant.configure("2") do |config|
     end
   end
 
+  config.vm.provision :puppet do |puppet|
+    ssh_username = !data['ssh']['username'].nil? ? data['ssh']['username'] : "vagrant"
+    puppet.facter = {
+      "ssh_username" => "#{ssh_username}"
+    }
+    puppet.manifests_path = "#{data['vm']['provision']['puppet-local']['manifests_path']}"
+    puppet.manifest_file = "#{data['vm']['provision']['puppet-local']['manifest_file']}"
+
+    if !data['vm']['provision']['puppet-local']['options'].empty?
+      puppet.options = data['vm']['provision']['puppet-local']['options']
+    end
+  end
+
   config.vm.provision :shell, :path => "puphpet/shell/execute-files.sh"
 
   if !data['ssh']['host'].nil?
