--- a/vagrant/puphpet/config.yaml
+++ b/vagrant/puphpet/config.yaml
@@ -75,6 +75,7 @@ php:
             - cli
             - intl
             - mcrypt
+            - curl
         pear: {  }
         pecl:
             - pecl_http
